--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,8 @@
             {% block body %}
                 <main>
                     <ul>
-                        <li><a href="{{ url('app_job') }}">Twig</a></li>
+                        <li><a href="{{ url('app_job') }}">Jobs</a></li>
+                        <li><a href="{{ url('app_workfield') }}">Workfields</a></li>
                         <li><a href="{{ url('app_job_vue') }}">Vue</a></li>
                     </ul>
                     {{ include('common/_flash_messages.html.twig') }}
