--- a/templates/job/vue.html.twig
+++ b/templates/job/vue.html.twig
@@ -1,7 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Jobs{% endblock %}
+{% block title %}Vue{% endblock %}
 
 {% block content %}
-    <h1>TODO</h1>
+    <div id="app"></div>
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ vite_entry_link_tags('page') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ vite_entry_script_tags('page') }}
 {% endblock %}
